Add thread support for one-webhook mode