@@ -5,4 +5,4 @@ RUN mkdir -p /home/eplbot/persistence
 COPY build/libs/EPLBot-1.0-SNAPSHOT-all.jar /home/eplbot/eplbot.jar
 COPY variables.env /home/eplbot/variables.env
 WORKDIR /home/eplbot
-ENTRYPOINT ["java", "-jar", "eplbot.jar"]
+ENTRYPOINT ["java", "--enable-preview", "-jar", "eplbot.jar"]
